--- a/QRIfyHub/requirements.txt
+++ b/QRIfyHub/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==0.90.0
-numpy==1.21.2
-opencv-python==4.5.3
-qrcode[pil]==7.3
-Pillow==8.3.2
+streamlit>=0.90.0
+numpy>=1.21.2
+opencv-python>=4.5.3
+qrcode[pil]>=7.3
+Pillow>=8.3.2
